objects/Subscription__c.object
<CustomObject>
    <fields>
        <fullName>App_Customer_Name__c</fullName>
        <label>App Customer Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Configtype__c</fullName>
        <label>Configtype</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DMS__c</fullName>
        <label>DMS</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>End_Date__c</fullName>
        <label>End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Related_Billed_Asset__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Billed Asset</label>
        <referenceTo>Billing_Item__c</referenceTo>
        <relationshipLabel>Subscriptions</relationshipLabel>
        <relationshipName>Subscriptions</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Start_Date__c</fullName>
        <label>Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_less_30__c</fullName>
        <formula>Start_Date__c - 30</formula>
        <inlineHelpText>formula field that subtracts 30 days from start date to create a range for matching</inlineHelpText>
        <label>Start Date less 30</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Date_plus_30__c</fullName>
        <formula>Start_Date__c + 30</formula>
        <inlineHelpText>formula field that adds 30 days to the start date to create a range for matching</inlineHelpText>
        <label>Start Date plus 30</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Start_Month_Year__c</fullName>
        <formula>TEXT(Month(Start_Date__c)) &amp;&quot;-&quot;&amp;  TEXT(Year(Start_Date__c))</formula>
        <inlineHelpText>formula field that converts the start date from mm/dd/yyyy to mm/yyyy for reconciliation</inlineHelpText>
        <label>Start Month/Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Name__c</fullName>
        <label>Subscription Name</label>
        <length>150</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subscription_Status__c</fullName>
        <formula>IF(  ISBLANK(End_Date__c ), &quot;Active&quot;, &quot;Inactive&quot;)</formula>
        <inlineHelpText>formula field that looks for the presence of an end date. If no end date, subscription is Active, otherwise Inactive</inlineHelpText>
        <label>Subscription Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>vAuto_Logical_Id__c</fullName>
        <formula>Customer__r.LogicalId__c</formula>
        <label>vAuto Logical Id</label>
        <type>Text</type>
    </fields>
    <label>Subscription</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <filters>
            <field>vAuto_Logical_Id__c</field>
            <operation>notContain</operation>
            <value>tc</value>
        </filters>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <displayFormat>S-{000000000}</displayFormat>
        <label>Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>